--- a/translation/de/sumwars-xml.po
+++ b/translation/de/sumwars-xml.po
@@ -10,6 +10,7 @@ msgstr ""
 "PO-Revision-Date: 2010-05-20 22:01+0200\n"
 "Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
 "Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1747,6 +1748,11 @@ msgstr "Riesenwolf"
 #: aisenMonsterStats.xml
 msgid "wolf"
 msgstr "Wolf"
+
+#: aisenMonsterStats.xml
+#, fuzzy
+msgid "Spider"
+msgstr "Plünderer"
 
 #: councilNPCStats.xml
 msgid "Worker"
