--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -6,7 +6,7 @@ m4trace:configure.ac:5: -1- m4_pattern_allow([^AS_FLAGS$])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([^_?m4_])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([^dnl$])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([^_?AS_])
-m4trace:configure.ac:5: -1- AC_SUBST([SHELL], [${CONFIG_SHELL-/bin/sh}])
+m4trace:configure.ac:5: -1- AC_SUBST([SHELL])
 m4trace:configure.ac:5: -1- AC_SUBST_TRACE([SHELL])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^SHELL$])
 m4trace:configure.ac:5: -1- AC_SUBST([PATH_SEPARATOR])
@@ -27,6 +27,9 @@ m4trace:configure.ac:5: -1- m4_pattern_allow([^PACKAGE_STRING$])
 m4trace:configure.ac:5: -1- AC_SUBST([PACKAGE_BUGREPORT], [m4_ifdef([AC_PACKAGE_BUGREPORT], ['AC_PACKAGE_BUGREPORT'])])
 m4trace:configure.ac:5: -1- AC_SUBST_TRACE([PACKAGE_BUGREPORT])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^PACKAGE_BUGREPORT$])
+m4trace:configure.ac:5: -1- AC_SUBST([PACKAGE_URL], [m4_ifdef([AC_PACKAGE_URL],       ['AC_PACKAGE_URL'])])
+m4trace:configure.ac:5: -1- AC_SUBST_TRACE([PACKAGE_URL])
+m4trace:configure.ac:5: -1- m4_pattern_allow([^PACKAGE_URL$])
 m4trace:configure.ac:5: -1- AC_SUBST([exec_prefix], [NONE])
 m4trace:configure.ac:5: -1- AC_SUBST_TRACE([exec_prefix])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^exec_prefix$])
@@ -98,23 +101,27 @@ m4trace:configure.ac:5: -1- m4_pattern_allow([^mandir$])
 m4trace:configure.ac:5: -1- AC_DEFINE_TRACE_LITERAL([PACKAGE_NAME])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^PACKAGE_NAME$])
 m4trace:configure.ac:5: -1- AH_OUTPUT([PACKAGE_NAME], [/* Define to the full name of this package. */
-#undef PACKAGE_NAME])
+@%:@undef PACKAGE_NAME])
 m4trace:configure.ac:5: -1- AC_DEFINE_TRACE_LITERAL([PACKAGE_TARNAME])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^PACKAGE_TARNAME$])
 m4trace:configure.ac:5: -1- AH_OUTPUT([PACKAGE_TARNAME], [/* Define to the one symbol short name of this package. */
-#undef PACKAGE_TARNAME])
+@%:@undef PACKAGE_TARNAME])
 m4trace:configure.ac:5: -1- AC_DEFINE_TRACE_LITERAL([PACKAGE_VERSION])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^PACKAGE_VERSION$])
 m4trace:configure.ac:5: -1- AH_OUTPUT([PACKAGE_VERSION], [/* Define to the version of this package. */
-#undef PACKAGE_VERSION])
+@%:@undef PACKAGE_VERSION])
 m4trace:configure.ac:5: -1- AC_DEFINE_TRACE_LITERAL([PACKAGE_STRING])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^PACKAGE_STRING$])
 m4trace:configure.ac:5: -1- AH_OUTPUT([PACKAGE_STRING], [/* Define to the full name and version of this package. */
-#undef PACKAGE_STRING])
+@%:@undef PACKAGE_STRING])
 m4trace:configure.ac:5: -1- AC_DEFINE_TRACE_LITERAL([PACKAGE_BUGREPORT])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^PACKAGE_BUGREPORT$])
 m4trace:configure.ac:5: -1- AH_OUTPUT([PACKAGE_BUGREPORT], [/* Define to the address where bug reports for this package should be sent. */
-#undef PACKAGE_BUGREPORT])
+@%:@undef PACKAGE_BUGREPORT])
+m4trace:configure.ac:5: -1- AC_DEFINE_TRACE_LITERAL([PACKAGE_URL])
+m4trace:configure.ac:5: -1- m4_pattern_allow([^PACKAGE_URL$])
+m4trace:configure.ac:5: -1- AH_OUTPUT([PACKAGE_URL], [/* Define to the home page for this package. */
+@%:@undef PACKAGE_URL])
 m4trace:configure.ac:5: -1- AC_SUBST([DEFS])
 m4trace:configure.ac:5: -1- AC_SUBST_TRACE([DEFS])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^DEFS$])
@@ -141,7 +148,7 @@ m4trace:configure.ac:5: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.ac:5: -1- m4_pattern_allow([^target_alias$])
 m4trace:configure.ac:6: -1- AM_INIT_AUTOMAKE([sumwars], [0.1])
 m4trace:configure.ac:6: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:6: -1- AM_AUTOMAKE_VERSION([1.10.1])
+m4trace:configure.ac:6: -1- AM_AUTOMAKE_VERSION([1.11.1])
 m4trace:configure.ac:6: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:6: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:6: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -168,11 +175,11 @@ m4trace:configure.ac:6: -1- m4_pattern_allow([^VERSION$])
 m4trace:configure.ac:6: -1- AC_DEFINE_TRACE_LITERAL([PACKAGE])
 m4trace:configure.ac:6: -1- m4_pattern_allow([^PACKAGE$])
 m4trace:configure.ac:6: -1- AH_OUTPUT([PACKAGE], [/* Name of package */
-#undef PACKAGE])
+@%:@undef PACKAGE])
 m4trace:configure.ac:6: -1- AC_DEFINE_TRACE_LITERAL([VERSION])
 m4trace:configure.ac:6: -1- m4_pattern_allow([^VERSION$])
 m4trace:configure.ac:6: -1- AH_OUTPUT([VERSION], [/* Version number of package */
-#undef VERSION])
+@%:@undef VERSION])
 m4trace:configure.ac:6: -1- AC_REQUIRE_AUX_FILE([missing])
 m4trace:configure.ac:6: -1- AC_SUBST([ACLOCAL])
 m4trace:configure.ac:6: -1- AC_SUBST_TRACE([ACLOCAL])
@@ -199,6 +206,9 @@ m4trace:configure.ac:6: -1- AC_SUBST([INSTALL_STRIP_PROGRAM])
 m4trace:configure.ac:6: -1- AC_SUBST_TRACE([INSTALL_STRIP_PROGRAM])
 m4trace:configure.ac:6: -1- m4_pattern_allow([^INSTALL_STRIP_PROGRAM$])
 m4trace:configure.ac:6: -1- AC_REQUIRE_AUX_FILE([install-sh])
+m4trace:configure.ac:6: -1- AC_SUBST([MKDIR_P])
+m4trace:configure.ac:6: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:6: -1- m4_pattern_allow([^MKDIR_P$])
 m4trace:configure.ac:6: -1- AC_SUBST([mkdir_p], ["$MKDIR_P"])
 m4trace:configure.ac:6: -1- AC_SUBST_TRACE([mkdir_p])
 m4trace:configure.ac:6: -1- m4_pattern_allow([^mkdir_p$])
@@ -454,71 +464,65 @@ m4trace:configure.ac:30: -1- AC_SUBST([CPP])
 m4trace:configure.ac:30: -1- AC_SUBST_TRACE([CPP])
 m4trace:configure.ac:30: -1- m4_pattern_allow([^CPP$])
 m4trace:configure.ac:34: -1- AH_OUTPUT([HAVE_LIBM], [/* Define to 1 if you have the `m\' library (-lm). */
-#undef HAVE_LIBM])
+@%:@undef HAVE_LIBM])
 m4trace:configure.ac:34: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBM])
 m4trace:configure.ac:34: -1- m4_pattern_allow([^HAVE_LIBM$])
 m4trace:configure.ac:36: -1- AH_OUTPUT([HAVE_LIBRT], [/* Define to 1 if you have the `rt\' library (-lrt). */
-#undef HAVE_LIBRT])
+@%:@undef HAVE_LIBRT])
 m4trace:configure.ac:36: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBRT])
 m4trace:configure.ac:36: -1- m4_pattern_allow([^HAVE_LIBRT$])
 m4trace:configure.ac:39: -1- AH_OUTPUT([HAVE_LIBINTL_H], [/* Define to 1 if you have the <libintl.h> header file. */
-#undef HAVE_LIBINTL_H])
+@%:@undef HAVE_LIBINTL_H])
 m4trace:configure.ac:39: -1- AH_OUTPUT([HAVE_LOCALE_H], [/* Define to 1 if you have the <locale.h> header file. */
-#undef HAVE_LOCALE_H])
+@%:@undef HAVE_LOCALE_H])
 m4trace:configure.ac:39: -1- AH_OUTPUT([HAVE_MEMORY_H], [/* Define to 1 if you have the <memory.h> header file. */
-#undef HAVE_MEMORY_H])
+@%:@undef HAVE_MEMORY_H])
 m4trace:configure.ac:39: -1- AH_OUTPUT([HAVE_STDDEF_H], [/* Define to 1 if you have the <stddef.h> header file. */
-#undef HAVE_STDDEF_H])
+@%:@undef HAVE_STDDEF_H])
 m4trace:configure.ac:39: -1- AH_OUTPUT([HAVE_STDLIB_H], [/* Define to 1 if you have the <stdlib.h> header file. */
-#undef HAVE_STDLIB_H])
+@%:@undef HAVE_STDLIB_H])
 m4trace:configure.ac:39: -1- AH_OUTPUT([HAVE_STRING_H], [/* Define to 1 if you have the <string.h> header file. */
-#undef HAVE_STRING_H])
+@%:@undef HAVE_STRING_H])
 m4trace:configure.ac:39: -1- AH_OUTPUT([HAVE_SYS_TIME_H], [/* Define to 1 if you have the <sys/time.h> header file. */
-#undef HAVE_SYS_TIME_H])
+@%:@undef HAVE_SYS_TIME_H])
 m4trace:configure.ac:39: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
-#undef HAVE_UNISTD_H])
+@%:@undef HAVE_UNISTD_H])
 m4trace:configure.ac:39: -1- AC_SUBST([GREP])
 m4trace:configure.ac:39: -1- AC_SUBST_TRACE([GREP])
 m4trace:configure.ac:39: -1- m4_pattern_allow([^GREP$])
-m4trace:configure.ac:39: -1- AC_SUBST([GREP])
-m4trace:configure.ac:39: -1- AC_SUBST_TRACE([GREP])
-m4trace:configure.ac:39: -1- m4_pattern_allow([^GREP$])
-m4trace:configure.ac:39: -1- AC_SUBST([EGREP])
-m4trace:configure.ac:39: -1- AC_SUBST_TRACE([EGREP])
-m4trace:configure.ac:39: -1- m4_pattern_allow([^EGREP$])
 m4trace:configure.ac:39: -1- AC_SUBST([EGREP])
 m4trace:configure.ac:39: -1- AC_SUBST_TRACE([EGREP])
 m4trace:configure.ac:39: -1- m4_pattern_allow([^EGREP$])
 m4trace:configure.ac:39: -1- AC_DEFINE_TRACE_LITERAL([STDC_HEADERS])
 m4trace:configure.ac:39: -1- m4_pattern_allow([^STDC_HEADERS$])
 m4trace:configure.ac:39: -1- AH_OUTPUT([STDC_HEADERS], [/* Define to 1 if you have the ANSI C header files. */
-#undef STDC_HEADERS])
+@%:@undef STDC_HEADERS])
 m4trace:configure.ac:39: -1- AH_OUTPUT([HAVE_SYS_TYPES_H], [/* Define to 1 if you have the <sys/types.h> header file. */
-#undef HAVE_SYS_TYPES_H])
+@%:@undef HAVE_SYS_TYPES_H])
 m4trace:configure.ac:39: -1- AH_OUTPUT([HAVE_SYS_STAT_H], [/* Define to 1 if you have the <sys/stat.h> header file. */
-#undef HAVE_SYS_STAT_H])
+@%:@undef HAVE_SYS_STAT_H])
 m4trace:configure.ac:39: -1- AH_OUTPUT([HAVE_STDLIB_H], [/* Define to 1 if you have the <stdlib.h> header file. */
-#undef HAVE_STDLIB_H])
+@%:@undef HAVE_STDLIB_H])
 m4trace:configure.ac:39: -1- AH_OUTPUT([HAVE_STRING_H], [/* Define to 1 if you have the <string.h> header file. */
-#undef HAVE_STRING_H])
+@%:@undef HAVE_STRING_H])
 m4trace:configure.ac:39: -1- AH_OUTPUT([HAVE_MEMORY_H], [/* Define to 1 if you have the <memory.h> header file. */
-#undef HAVE_MEMORY_H])
+@%:@undef HAVE_MEMORY_H])
 m4trace:configure.ac:39: -1- AH_OUTPUT([HAVE_STRINGS_H], [/* Define to 1 if you have the <strings.h> header file. */
-#undef HAVE_STRINGS_H])
+@%:@undef HAVE_STRINGS_H])
 m4trace:configure.ac:39: -1- AH_OUTPUT([HAVE_INTTYPES_H], [/* Define to 1 if you have the <inttypes.h> header file. */
-#undef HAVE_INTTYPES_H])
+@%:@undef HAVE_INTTYPES_H])
 m4trace:configure.ac:39: -1- AH_OUTPUT([HAVE_STDINT_H], [/* Define to 1 if you have the <stdint.h> header file. */
-#undef HAVE_STDINT_H])
+@%:@undef HAVE_STDINT_H])
 m4trace:configure.ac:39: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
-#undef HAVE_UNISTD_H])
+@%:@undef HAVE_UNISTD_H])
 m4trace:configure.ac:42: -1- AC_DEFINE_TRACE_LITERAL([HAVE__BOOL])
 m4trace:configure.ac:42: -1- m4_pattern_allow([^HAVE__BOOL$])
 m4trace:configure.ac:42: -1- AH_OUTPUT([HAVE__BOOL], [/* Define to 1 if the system has the type `_Bool\'. */
-#undef HAVE__BOOL])
+@%:@undef HAVE__BOOL])
 m4trace:configure.ac:42: -1- AC_DEFINE_TRACE_LITERAL([HAVE_STDBOOL_H])
 m4trace:configure.ac:42: -1- m4_pattern_allow([^HAVE_STDBOOL_H$])
 m4trace:configure.ac:42: -1- AH_OUTPUT([HAVE_STDBOOL_H], [/* Define to 1 if stdbool.h conforms to C99. */
-#undef HAVE_STDBOOL_H])
+@%:@undef HAVE_STDBOOL_H])
 m4trace:configure.ac:43: -1- AH_OUTPUT([inline], [/* Define to `__inline__\' or `__inline\' if that\'s what the C compiler
    calls it, or to nothing if \'inline\' is not supported under any name.  */
 #ifndef __cplusplus
@@ -527,27 +531,27 @@ m4trace:configure.ac:43: -1- AH_OUTPUT([inline], [/* Define to `__inline__\' or 
 m4trace:configure.ac:44: -1- AC_DEFINE_TRACE_LITERAL([size_t])
 m4trace:configure.ac:44: -1- m4_pattern_allow([^size_t$])
 m4trace:configure.ac:44: -1- AH_OUTPUT([size_t], [/* Define to `unsigned int\' if <sys/types.h> does not define. */
-#undef size_t])
+@%:@undef size_t])
 m4trace:configure.ac:45: -1- AC_DEFINE_TRACE_LITERAL([HAVE_PTRDIFF_T])
 m4trace:configure.ac:45: -1- m4_pattern_allow([^HAVE_PTRDIFF_T$])
 m4trace:configure.ac:45: -1- AH_OUTPUT([HAVE_PTRDIFF_T], [/* Define to 1 if the system has the type `ptrdiff_t\'. */
-#undef HAVE_PTRDIFF_T])
+@%:@undef HAVE_PTRDIFF_T])
 m4trace:configure.ac:48: -1- AH_OUTPUT([HAVE_FLOOR], [/* Define to 1 if you have the `floor\' function. */
-#undef HAVE_FLOOR])
+@%:@undef HAVE_FLOOR])
 m4trace:configure.ac:48: -1- AH_OUTPUT([HAVE_GETTIMEOFDAY], [/* Define to 1 if you have the `gettimeofday\' function. */
-#undef HAVE_GETTIMEOFDAY])
+@%:@undef HAVE_GETTIMEOFDAY])
 m4trace:configure.ac:48: -1- AH_OUTPUT([HAVE_MEMMOVE], [/* Define to 1 if you have the `memmove\' function. */
-#undef HAVE_MEMMOVE])
+@%:@undef HAVE_MEMMOVE])
 m4trace:configure.ac:48: -1- AH_OUTPUT([HAVE_MEMSET], [/* Define to 1 if you have the `memset\' function. */
-#undef HAVE_MEMSET])
+@%:@undef HAVE_MEMSET])
 m4trace:configure.ac:48: -1- AH_OUTPUT([HAVE_POW], [/* Define to 1 if you have the `pow\' function. */
-#undef HAVE_POW])
+@%:@undef HAVE_POW])
 m4trace:configure.ac:48: -1- AH_OUTPUT([HAVE_SETLOCALE], [/* Define to 1 if you have the `setlocale\' function. */
-#undef HAVE_SETLOCALE])
+@%:@undef HAVE_SETLOCALE])
 m4trace:configure.ac:48: -1- AH_OUTPUT([HAVE_SQRT], [/* Define to 1 if you have the `sqrt\' function. */
-#undef HAVE_SQRT])
+@%:@undef HAVE_SQRT])
 m4trace:configure.ac:48: -1- AH_OUTPUT([HAVE_STRCHR], [/* Define to 1 if you have the `strchr\' function. */
-#undef HAVE_STRCHR])
+@%:@undef HAVE_STRCHR])
 m4trace:configure.ac:50: -1- AC_CONFIG_FILES([Makefile])
 m4trace:configure.ac:51: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
 m4trace:configure.ac:51: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
@@ -555,7 +559,17 @@ m4trace:configure.ac:51: -1- m4_pattern_allow([^LIB@&t@OBJS$])
 m4trace:configure.ac:51: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
 m4trace:configure.ac:51: -1- AC_SUBST_TRACE([LTLIBOBJS])
 m4trace:configure.ac:51: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:51: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.ac:51: -1- AC_SUBST([am__EXEEXT_TRUE])
+m4trace:configure.ac:51: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
+m4trace:configure.ac:51: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.ac:51: -1- AC_SUBST([am__EXEEXT_FALSE])
+m4trace:configure.ac:51: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
+m4trace:configure.ac:51: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.ac:51: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.ac:51: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
 m4trace:configure.ac:51: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:51: -1- AC_SUBST_TRACE([top_build_prefix])
 m4trace:configure.ac:51: -1- AC_SUBST_TRACE([srcdir])
 m4trace:configure.ac:51: -1- AC_SUBST_TRACE([abs_srcdir])
 m4trace:configure.ac:51: -1- AC_SUBST_TRACE([top_srcdir])
